// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-1p1hpo,
[data-css-1p1hpo] {
  position: relative;
}

.css-1p1hpo > div,
[data-css-1p1hpo] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-1p1hpo > div:before,
[data-css-1p1hpo] > div:before,
.css-1p1hpo > div:after,
[data-css-1p1hpo] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-1p1hpo > div:first-child,
[data-css-1p1hpo] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-1p1hpo > div:before,
[data-css-1p1hpo] > div:before {
  left: -28px;
  top: 0px;
}

.css-1p1hpo > div:after,
[data-css-1p1hpo] > div:after {
  left: 25px;
  top: 0px;
}

<BallRotate
  loading={true}
>
  <div
    data-css-1p1hpo=""
  >
    <div />
  </div>
</BallRotate>
`;

exports[`enzyme.render 1`] = `
.css-1p1hpo,
[data-css-1p1hpo] {
  position: relative;
}

.css-1p1hpo > div,
[data-css-1p1hpo] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-1p1hpo > div:before,
[data-css-1p1hpo] > div:before,
.css-1p1hpo > div:after,
[data-css-1p1hpo] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-1p1hpo > div:first-child,
[data-css-1p1hpo] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-1p1hpo > div:before,
[data-css-1p1hpo] > div:before {
  left: -28px;
  top: 0px;
}

.css-1p1hpo > div:after,
[data-css-1p1hpo] > div:after {
  left: 25px;
  top: 0px;
}

<div
  data-css-1p1hpo=""
>
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-1p1hpo,
[data-css-1p1hpo] {
  position: relative;
}

.css-1p1hpo > div,
[data-css-1p1hpo] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-1p1hpo > div:before,
[data-css-1p1hpo] > div:before,
.css-1p1hpo > div:after,
[data-css-1p1hpo] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #fff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-1p1hpo > div:first-child,
[data-css-1p1hpo] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-1p1hpo > div:before,
[data-css-1p1hpo] > div:before {
  left: -28px;
  top: 0px;
}

.css-1p1hpo > div:after,
[data-css-1p1hpo] > div:after {
  left: 25px;
  top: 0px;
}

<div
  data-css-1p1hpo=""
>
  <div />
</div>
`;
